--- a/app/templates/blog/post_list.html
+++ b/app/templates/blog/post_list.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="ko">
 <head>
@@ -6,9 +7,29 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
 </head>
 <body>
-  <h1>Post List</h1>
-  {{ posts|safe }}
+  <nav class="navbar
+              navbar-expand-lg
+              navbar-dark
+              bg-dark">
+      <a href="" class="navbar-brand">Django</a>
+  </nav>
+  <div class="container">
+    {% for post in posts %}
+      <div class="card mb-2">
+          <div class="card-body">
+              <h5 class="card-title">{{ post.title}}</h5>
+              <h6 class="card-subtitle mb-2 text-muted">{{ post.created_date }}</h6>
+              <p class="care-text">{{ post.text }}</p>
+              <p class="text-right">{{ post.author }}</p>
+          </div>
+      </div>
+      {% endfor %}
+  </div>
+  <ul>
+
+  </ul>
 </body>
 </html>
