post_list에서 내용 줄바꿈 적용 및 최대 200글자만 보이도록 함

--- a/app/templates/blog/post_list.html
+++ b/app/templates/blog/post_list.html
@@ -22,7 +22,7 @@
           <div class="card-body">
               <h5 class="card-title">{{ post.title}}</h5>
               <h6 class="card-subtitle mb-2 text-muted">{{ post.created_date }}</h6>
-              <p class="care-text">{{ post.text }}</p>
+              <p class="care-text">{{ post.text|linebreaksbr|truncatechars:200 }}</p>
               <p class="text-right">{{ post.author }}</p>
           </div>
       </div>
