block content를 사용하여 중복되는template를 깔끔하게 만들었음

--- a/app/templates/blog/post_list.html
+++ b/app/templates/blog/post_list.html
@@ -1,37 +1,15 @@
-{% load static %}
-<!doctype html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
-</head>
-<body>
-  <nav class="navbar
-              navbar-expand-lg
-              navbar-dark
-              bg-dark">
-      <a href="" class="navbar-brand">Django</a>
-  </nav>
-  <div class="container">
-    {% for post in posts %}
-      <div class="card mb-2">
-          <div class="card-body">
-              <h5 class="card-title">
-                  <a href="/posts/{{ post.pk }}">{{ post.title }}</a>
-              </h5>
-              <h6 class="card-subtitle mb-2 text-muted">{{ post.created_date }}</h6>
-              <p class="care-text">{{ post.text|linebreaksbr|truncatechars:200 }}</p>
-              <p class="text-right">{{ post.author }}</p>
-          </div>
-      </div>
-      {% endfor %}
+{% extends 'base.html' %}
+{% block content %}
+{% for post in posts %}
+<div class="card mb-2">
+  <div class="card-body">
+      <h5 class="card-title">
+          <a href="/posts/{{ post.pk }}">{{ post.title }}</a>
+      </h5>
+      <h6 class="card-subtitle mb-2 text-muted">{{ post.created_date }}</h6>
+      <p class="care-text">{{ post.text|linebreaksbr|truncatechars:200 }}</p>
+      <p class="text-right">{{ post.author }}</p>
   </div>
-  <ul>
-
-  </ul>
-</body>
-</html>
+</div>
+{% endfor %}
+{% endblock %}
