--- a/app/templates/blog/post_detail.html
+++ b/app/templates/blog/post_detail.html
@@ -1,33 +1,14 @@
-{% load static %}
-<!doctype html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
-</head>
-<body>
-  <nav class="navbar
-              navbar-expand-lg
-              navbar-dark
-              bg-dark">
-      <a href="/posts/" class="navbar-brand">Django</a>
-  </nav>
-  <div class="container">
-      <div class="card mb-2">
-          <div class="card-body">
-              <h5 class="card-title">{{ post.title}}</h5>
-              <h6 class="card-subtitle mb-2 text-muted">{{ post.created_date }}</h6>
-              <p class="care-text">{{ post.text|linebreaksbr }}</p>
-              <p class="text-right">{{ post.author }}</p>
-          </div>
+{% extends 'base.html' %}
+{% block content %}
+<div class="container mt-2">
+  <a href="/" class="btn btn-primary mb-2">글 목록으로</a>
+  <div class="card mb-2">
+      <div class="card-body">
+          <h5 class="card-title">{{ post.title}}</h5>
+          <h6 class="card-subtitle mb-2 text-muted">{{ post.created_date }}</h6>
+          <p class="care-text">{{ post.text|linebreaksbr }}</p>
+          <p class="text-right">{{ post.author }}</p>
       </div>
   </div>
-  <ul>
-
-  </ul>
-</body>
-</html>
+</div>
+{% endblock %}
