post-list url에 키워드 인자 방식으로 pk값을 넘겨줌

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Djangogirls</title>
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
 </head>
 <body>
@@ -14,7 +14,7 @@
               navbar-expand-lg
               navbar-dark
               bg-dark">
-      <a href="/" class="navbar-brand">Django</a>
+      <a href="{% url 'post-list' %}" class="navbar-brand">DjangoGirls</a>
   </nav>
   <div class="container mt-2">
       {% block content %}
