--- a/app/templates/blog/post_detail.html
+++ b/app/templates/blog/post_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container mt-2">
-  <a href="/" class="btn btn-primary mb-2">글 목록으로</a>
+  <a href="{% url 'post-list' %}" class="btn btn-primary mb-2">글 목록으로</a>
   <div class="card mb-2">
       <div class="card-body">
           <h5 class="card-title">{{ post.title}}</h5>
