--- a/app/templates/blog/post_list.html
+++ b/app/templates/blog/post_list.html
@@ -4,7 +4,7 @@
 <div class="card mb-2">
   <div class="card-body">
       <h5 class="card-title">
-          <a href="/posts/{{ post.pk }}">{{ post.title }}</a>
+          <a href="{% url 'post-detail' pk=post.pk %}">{{ post.title }}</a>
       </h5>
       <h6 class="card-subtitle mb-2 text-muted">{{ post.created_date }}</h6>
       <p class="care-text">{{ post.text|linebreaksbr|truncatechars:200 }}</p>
