--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,12 @@
               navbar-dark
               bg-dark">
       <a href="{% url 'post-list' %}" class="navbar-brand">DjangoGirls</a>
+      <ul class="navbar-nav mr-auto"></ul>
+      <ul class="navbar-nav">
+          <li class="nav-item">
+              <a href="{% url 'post-create' %}" class="nav-link">+ 글 작성</a>
+          </li>
+      </ul>
   </nav>
   <div class="container mt-2">
       {% block content %}
